--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <h1>TO-DO List</h1>
+    <h2>A better way of keeping track of your notes</h2>
+    <p>Try out early beta and never loose track of your notes again!</p>
+
+    <button><a href="addNote.html">Get Start </a></button>
   </body>
 </html>
