--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,90 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <h1>TO-DO List</h1>
-    <h2>A better way of keeping track of your notes</h2>
-    <p>Try out early beta and never loose track of your notes again!</p>
 
-    <button><a href="addNote.html">Get Start </a></button>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Hello World!</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <div class="main">
+    <div class="left">
+      <a href="index.html"> Rutinitas</a>
+      <input type="search">
+
+      <h6>Favourite</h6>
+      <ul>
+        <li>My Day</li>
+        <li>Important</li>
+        <li>Personal</li>
+        <li>All</li>
+        <li>Completed</li>
+        <li>Assigned to me</li>
+      </ul>
+
+      <h6>Your own tags</h6>
+      <ul>
+        <li>GoPay</li>
+        <li>Kretya Studio</li>
+        <li>Content Dump</li>
+      </ul>
+    </div>
+
+    <div class="middle">
+      <div class="header">
+        <h3>My Day</h3>
+        <p>March 2024</p>
+        <div class="add-task">
+          <button>Add Task</button>
+        </div>
+      </div>
+
+      <div class="content">
+        <div class="note">
+          <input type="checkbox">
+          <h5>Promotion banner</h5>
+          <p>GpPay of 4 <span>Today</span></p>
+        </div>
+        <div class="note">
+          <input type="checkbox">
+          <h5>Promotion banner</h5>
+          <p>GpPay of 4 <span>Today</span></p>
+        </div>
+        <div class="note">
+          <input type="checkbox">
+          <h5>Promotion banner</h5>
+          <p>GpPay of 4 <span>Today</span></p>
+        </div><div class="note">
+          <input type="checkbox">
+          <h5>Promotion banner</h5>
+          <p>GpPay of 4 <span>Today</span></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="right">
+      <div class="profile">
+        <img src="" alt="">
+        <h3>Kaveen Hansith</h3>
+        <p>kaveen123@gmail.com</p>
+      </div>
+
+      <div class="calender">
+
+      </div>
+
+      <div class="completed-tasks">
+        <h3>Completed tasks</h3>
+        <div class="c-task">
+          <input type="checkbox" name="" id="">
+          <h4>Cleaning office room</h4>
+          <p>Personal <span>Today</span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</body>
+
 </html>
