--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hello World!</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -11,6 +12,7 @@
   <div class="main">
     <div class="left">
       <a href="index.html"> Rutinitas</a>
+      <br>
       <input type="search">
 
       <h6>Favourite</h6>
@@ -85,6 +87,8 @@
     </div>
   </div>
 
+
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
