--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div class="main">
-    <div class="left">
+  <div class="main row">
+    <div class="left col-3">
       <a href="index.html"> Rutinitas</a>
       <br>
       <input type="search">
@@ -33,7 +33,7 @@
       </ul>
     </div>
 
-    <div class="middle">
+    <div class="middle col-6">
       <div class="header">
         <h3>My Day</h3>
         <p>March 2024</p>
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="right">
+    <div class="right col-3">
       <div class="profile">
         <img src="" alt="">
         <h3>Kaveen Hansith</h3>
