--- a/src/index.html
+++ b/src/index.html
@@ -9,82 +9,26 @@
 </head>
 
 <body>
-  <div class="main row">
-    <div class="left col-3">
-      <a href="index.html"> Rutinitas</a>
-      <br>
-      <input type="search">
 
-      <h6>Favourite</h6>
-      <ul>
-        <li>My Day</li>
-        <li>Important</li>
-        <li>Personal</li>
-        <li>All</li>
-        <li>Completed</li>
-        <li>Assigned to me</li>
-      </ul>
+  <div class="add-note m-5">
 
-      <h6>Your own tags</h6>
-      <ul>
-        <li>GoPay</li>
-        <li>Kretya Studio</li>
-        <li>Content Dump</li>
-      </ul>
-    </div>
+      <form>
+        <a href="index.html">
+          <h1>Rutinitas</h1>
+        </a>
+        <h1 class="h3 mb-3 fw-normal">Add new Work</h1>
 
-    <div class="middle col-6">
-      <div class="header">
-        <h3>My Day</h3>
-        <p>March 2024</p>
-        <div class="add-task">
-          <button>Add Task</button>
+        <div class="form-floating">
+          <input type="text" class="form-control" id="title">
+          <label for="floatingInput">Work Title</label>
         </div>
-      </div>
-
-      <div class="content">
-        <div class="note">
-          <input type="checkbox">
-          <h5>Promotion banner</h5>
-          <p>GpPay of 4 <span>Today</span></p>
+        <div class="form-floating">
+          <textarea name="" id="" cols="50" rows="5"></textarea>
+          <label for="floatingPassword">Describe</label>
         </div>
-        <div class="note">
-          <input type="checkbox">
-          <h5>Promotion banner</h5>
-          <p>GpPay of 4 <span>Today</span></p>
-        </div>
-        <div class="note">
-          <input type="checkbox">
-          <h5>Promotion banner</h5>
-          <p>GpPay of 4 <span>Today</span></p>
-        </div><div class="note">
-          <input type="checkbox">
-          <h5>Promotion banner</h5>
-          <p>GpPay of 4 <span>Today</span></p>
-        </div>
-      </div>
-    </div>
 
-    <div class="right col-3">
-      <div class="profile">
-        <img src="" alt="">
-        <h3>Kaveen Hansith</h3>
-        <p>kaveen123@gmail.com</p>
-      </div>
-
-      <div class="calender">
-
-      </div>
-
-      <div class="completed-tasks">
-        <h3>Completed tasks</h3>
-        <div class="c-task">
-          <input type="checkbox" name="" id="">
-          <h4>Cleaning office room</h4>
-          <p>Personal <span>Today</span></p>
-        </div>
-      </div>
-    </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+      </form>
   </div>
 
 
