add another changes

--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,24 @@
 
   <div class="add-note m-5">
 
+    <div class="title">
+      <a href="index.html"><h1>Rutinitas</h1></a>
+    </div>
+
       <form>
-        <a href="index.html">
-          <h1>Rutinitas</h1>
-        </a>
         <h1 class="h3 mb-3 fw-normal">Add new Work</h1>
 
-        <div class="form-floating">
-          <input type="text" class="form-control" id="title">
+        <div class="">
           <label for="floatingInput">Work Title</label>
+          <input type="text" class="form-control" id="title">
+         
         </div>
-        <div class="form-floating">
+        <div class="">
+          <label for="floatingPassword">Describe</label><br>
           <textarea name="" id="" cols="50" rows="5"></textarea>
-          <label for="floatingPassword">Describe</label>
         </div>
 
-        <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+        <button class="btn btn-primary w-25 py-2">Add Work</button>
       </form>
   </div>
 
