add some style to form

--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,27 @@
 
 <body>
 
-  <div class="add-note m-5">
+  <div class="title">
+    <a href="index.html"><h1>Rutinitas</h1></a>
+  </div>
 
-    <div class="title">
-      <a href="index.html"><h1>Rutinitas</h1></a>
-    </div>
 
-      <form>
+      <form class="add-note">
         <h1 class="h3 mb-3 fw-normal">Add new Work</h1>
 
-        <div class="">
-          <label for="floatingInput">Work Title</label>
+        <div class="title-note">
+          <label>Work Title</label>
           <input type="text" class="form-control" id="title">
          
         </div>
         <div class="">
-          <label for="floatingPassword">Describe</label><br>
-          <textarea name="" id="" cols="50" rows="5"></textarea>
+          <label>Describe</label><br>
+          <textarea name="" id="" cols="52" rows="5"></textarea>
         </div>
 
         <button class="btn btn-primary w-25 py-2">Add Work</button>
       </form>
-  </div>
+
 
 
   <script src="js/bootstrap.min.js"></script>
