added notes display

--- a/src/index.html
+++ b/src/index.html
@@ -14,29 +14,27 @@
     <a href="index.html"><h1>Rutinitas</h1></a>
   </div>
 
+  <form class="add-note" id="myForm">
+    <h1 class="h3 mb-3 fw-normal">Add new Work</h1>
 
-      <form class="add-note" id="myForm">
-        <h1 class="h3 mb-3 fw-normal">Add new Work</h1>
+    <div class="title-note">
+      <label>Work Title</label>
+      <input type="text" class="form-control" id="note-title">
 
-        <div class="title-note">
-          <label>Work Title</label>
-          <input type="text" class="form-control" id="note-title">
-         
-        </div>
-        <div class="">
-          <label>Describe</label><br>
-          <textarea name="" id="" cols="52" rows="5" id="note-description"></textarea>
-        </div>
+    </div>
+    <div class="">
+      <label>Describe</label><br>
+      <textarea class="form-control" cols="52" rows="5" id="note-description"></textarea>
+    </div>
 
-        <button class="btn btn-primary w-25 py-2" type="submit" onclick="handleClick()">Add Work</button>
-      </form>
+    <button class="btn btn-primary w-25 py-2" type="button" onclick="handleClick()">Add Work</button>
+  </form>
 
-      <div class="added-notes">
-          <div class="note">
-            
-          </div>
-      </div>
+  <div class="added-notes" id="added-note">
+  </div>
 
+  <script src="js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
 
 
   <script src="js/bootstrap.min.js"></script>
