--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <h1>Rutinitas</h1>
   </div>
 
-  <div className="form">
+  <div className="form" style="margin: 20px 0;">
     <Form action="" method="post" id="note-form" className='note-form'>
       <p>
         <label htmlFor="title">Title</label>
